AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/security/transformers/customer-provided-certificates-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-deployment-full-tls-certframe-transformer-connect-certificate
patch: |-
  - op: add
    path: /spec/template/spec/initContainers/0/env/-
    value:
      name: SAS_CERTIFICATE_GENERATOR
      value:  ""
  - op: add
    path: /spec/template/spec/initContainers/0/env/-
    value:
      name: SAS_CERTIFICATE_SECRET_NAME
      value:  "sas-connect-certificate"
target:
  kind: Deployment
  name: sas-connect-spawner
