AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/security/transformers/sas-ingress-cookie-samesite-transformer.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-ingress-session-cookie-samesite-transformer
patch: |-
  kind: Ingress
  metadata:
    name: wildcard
    annotations:
      nginx.ingress.kubernetes.io/session-cookie-samesite: "None"
      nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: "true"
target:
  annotationSelector: sas.com/kustomize-base=base
  kind: Ingress
